<resources>
    <string name="app_name">Task Manager</string>
    <string name="add_task">Add Task</string>
    <string name="delete_all">Delete All</string>
    <string name="task_title">Task Title</string>
    <string name="task_description">Task Description</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="no_tasks">No tasks yet. Add one!</string>
    <string name="task_deleted">Task deleted</string>
    <string name="undo">Undo</string>
    <string name="all_tasks_deleted">All tasks deleted</string>
    <string name="empty_fields">Please fill in all fields</string>
</resources>